<resources>
    <string name="app_name">BSOD_UVCE</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello">Hello</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="add_tags_hint">Add your skills here</string>
    <string name="skill_exits">The skill already exists</string>
    <string name="your_skillset">Your skillset</string>
    <string name="your_rating">Your rating for this week!</string>
    <string name="jobs_this_week">Jobs this week</string>
    <string name="total_jobs">Total Jobs</string>
    <string name="jobs_for_badge">Jobs for badge</string>
    <string name="job_title">Enter Job Title</string>
    <string name="job_desc">Enter Job Description</string>
    <string name="salary_for_job">Salary for Job</string>


    <string name="emailPrompt">Email</string>
    <string name="passwordPrompt">OTP</string>
    <string name="forgotPasswordLabel">Forgot Password?</string>
    <string name="signUpLabel1">Don\'t Have an account?</string>
    <string name="signUpLabel2">Sign Up</string>
    <string name="login">Login</string>
    <string name="creatorLabel">Created By Nagendra Kumar Jamadagni</string>
    <string name="loginProgressMessage">Processing. Please Wait</string>
    <string name="confirmPasswordPrompt">Confirm Password</string>
    <string name="displayNamePrompt">Display Name</string>
    <string name="signUp">Sign Up</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="myBooks">My Books</string>
    <string name="DPContentDescriptior">The users Display picture</string>
    <string name="save">Save Changes</string>
    <string name="displayName">Display Name</string>
    <string name="oldPassword">Old Passsword</string>
    <string name="newPassword">New Password</string>
    <string name="confirmNewPassword">Confirm Password</string>
    <string name="verifyPassword">Verify Old Password</string>
    <string name="verifyPasswordLabel">Verify your old password to change your password</string>
    <string name="bookThumbnail">Book Thumbnail</string>
    <string name="rating">Rating:</string>
    <string name="bookTitle">Title:</string>
    <string name="bookSubtitle">Subtitle:</string>
    <string name="bookAuthor">Author:</string>
    <string name="by">By</string>
    <string name="defaultBookPicture">Default book picture</string>
    <string name="bookPublisher">Publisher:</string>
    <string name="bookPublicationDate">Publication Date:</string>
    <string name="bookPages">Number of pages:</string>
    <string name="bookDescription">Description:</string>
    <string name="buttonAddToShelf">Add to my shelves</string>
    <string name="buttonPrice">Check for prices</string>
    <string name="currentlyUnavailable">Currently unavailable</string>
    <string name="phoneNumberPrompt">Phone Number</string>
    <string name="labourerPrompt">Labourer</string>
    <string name="employerPrompt">Employer</string>
    <string name="please_enter_your_otp">Please Enter your OTP</string>
    <string name="verify">Verify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="employer">Employer</string>
    <string name="labourer">Labourer</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="get_location">Get Location</string>
    <string name="select_your_user_type">Select Your User Type</string>
    <string name="default_location" translatable="false">0 0</string>
    <string name="construction">Construction</string>
    <string name="painting">Painting</string>
    <string name="carpentry">Carpentry</string>
    <string name="plumbing">Plumbing</string>
    <string name="electric_work">Electric Work</string>
    <string name="skill_message">Select the applicable skills</string>
    <string name="finish">Finish</string>
    <string-array name="predef_skills">
        <item>Cooking</item>
        <item>Cleaning</item>
    </string-array>
    <string name="add_skill">Add skill</string>
    <string name="skills_needed">Skills needed for this job</string>
    <string name="set_location_hint">Type your location</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>

    <!--    Dont translate this-->
    <string name="db_jobs" translatable="false">jobs</string>
    <string name="enter_your_chat_messages_here">Enter your chat messages here</string>
    <string name="type_here">Type Here</string>
    <string name="send">Send</string>
    <string name="chat">Chat</string>
    <string name="accept">Accept</string>
    <string name="great_talk">Great! You can now chat.</string>
    <string name="has_applied">has applied</string>
    <string name="job_duration">Duration</string>
    <string name="title">Title</string>
    <string name="view_achievements">View your achievements</string>
    <string name="wait_for_job">Waiting for someone to apply</string>
</resources>
