<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.Settings">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <include layout="@layout/layout_toolbar"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/default_profile_picture"
            android:id="@+id/profilePictureSettings"
            android:contentDescription="@string/DPContentDescriptior"
            android:layout_margin="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/view_achievements"
            android:background="@drawable/next_button"
            android:textColor="@android:color/white"
            android:id="@+id/achievements"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/save"
            android:background="@drawable/next_button"
            android:textColor="@android:color/white"
            android:id="@+id/saveButton"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/logout"
            android:background="@drawable/next_button"
            android:textColor="@android:color/white"
            android:id="@+id/logoutButton"/>
    </LinearLayout>
</ScrollView>