<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.UpdateDetails">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/credentials">
            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:contentDescription="@string/profilePicture"
                android:src="@mipmap/default_profile_picture"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/profilePictureSignUp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/nameInput">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:id="@+id/nameTextBox"
                    android:hint="@string/name"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/location"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/default_location"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/locationLabel">
            </TextView>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:background="@drawable/next_button"
                android:layout_margin="20dp"
                android:id="@+id/locationButton"
                android:text="@string/get_location"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/select_your_user_type"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/labourerRadio"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:id="@+id/radioGroup">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/labourerRadio"
                    android:layout_margin="10dp"
                    android:text="@string/labourer"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/employerRadio"
                    android:layout_margin="10dp"
                    android:text="@string/employer"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:background="@drawable/next_button"
                android:layout_margin="20dp"
                android:id="@+id/nextDetails"
                android:text="@string/next"/>
        </RelativeLayout>
    </LinearLayout>


</ScrollView>