<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createJob">
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/job_title"
        android:id="@+id/job_title"
        app:layout_constraintTop_toBottomOf=""
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/job_desc"
        android:id="@+id/job_desc"
        app:layout_constraintTop_toBottomOf="@id/job_title"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salary_for_job"
        android:id="@+id/salary"
        app:layout_constraintTop_toBottomOf="@id/job_desc"
        />


    
    <Button
        android:id="@+id/get_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Get Location"
        app:layout_constraintTop_toBottomOf="@id/salary"
        />


</androidx.constraintlayout.widget.ConstraintLayout>