<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- <Button
            android:id="@+id/infoBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"

            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/ic_about"
            android:backgroundTint="#000"
            android:elevation="0dp" />-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/relLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detailsLayout">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"

                        android:id="@+id/details">

                        <TextView
                            android:id="@+id/jobTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/jobCategoryIcon"
                            android:text="Title"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/categories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/jobTitle"
                            android:layout_toRightOf="@+id/jobCategoryIcon"
                            android:text="Categories" />

                        <TextView
                            android:id="@+id/duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/categories"
                            android:layout_toRightOf="@+id/jobCategoryIcon"
                            android:text="Duration" />

                        <TextView
                            android:id="@+id/amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/duration"
                            android:layout_toRightOf="@+id/jobCategoryIcon"
                            android:text="Amount" />

                    </LinearLayout>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/emplyorStatus"
                        android:text="Press Accept if you like the job"/>


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/acceptBtn"
                        android:text="@string/accept">

                    </Button>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/startChat"
                        android:visibility="gone"
                        android:text="@string/chat"/>

                </LinearLayout>

                <Button
                    android:id="@+id/expandBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:backgroundTint="#888888"
                    android:drawableLeft="@drawable/ic_keyboard_arrow_down_black_24dp"
                    android:elevation="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingTop="10dp"

                    android:text="Description" />
            </LinearLayout>

        </RelativeLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expandableView"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relLayout">

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/description" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.cardview.widget.CardView>